# Meteor

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  build.rs  hooks.nsi  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/cputemp/: Program.cs  README.md  cputemp.csproj
src-tauri/src/: amd.rs  appicons.rs  apps_db.rs  art.rs  battlenet.rs  cputemp.rs  discord.rs  ea.rs  elevation.rs  epic.rs  files.rs  gog.rs  igdb.rs  launcher.rs  lib.rs  main.rs  metrics.rs  models.rs  overlay.rs  overlay_dcomp.rs  overlay_diag.rs  overlay_native.rs  playtime.rs  presentmon.rs  screenshots.rs  steam.rs  storage.rs  sysstat.rs  system.rs  translate.rs  ubisoft.rs  windows_apps.rs  xbox.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AddAppDialog.tsx  BulkCategoryDialog.tsx  CategoryDialog.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CoverDialog.tsx  DetailView.tsx  EditCategoryDialog.tsx  Footer.tsx  GameCard.tsx  GuidedTour.tsx  HiddenGamesModal.tsx  Home.tsx  IntroSplash.tsx  NewCategoryDialog.tsx  NotificationsPanel.tsx  Onboarding.tsx  Overlay.tsx  OverlayMpoPanel.tsx  OverlaySettingsScreen.tsx  SettingsDialog.tsx  Sidebar.tsx  Splash.tsx  Spotlight.tsx  TopBar.tsx  UpdatePrompt.tsx  icons.tsx
src/hooks/: useLibrary.ts
src/i18n/: I18nProvider.tsx  config.ts  en.ts  es.ts
src/lib/: categoryIcons.tsx  cover.ts  fuzzy.ts  i18n.ts  shortcuts.ts  sources.ts  tauri.ts  types.ts
