[package]
name = "meteor"
version = "0.1.0"
description = "Meteor - biblioteca unificada de juegos y apps"
authors = ["Alfonso"]
edition = "2021"
rust-version = "1.77"

# The library is what main.rs (and mobile entry points) call into.
[lib]
name = "meteor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamlocate = "2.1"
ureq = { version = "2", features = ["json", "tls"] }
urlencoding = "2"
sysinfo = "0.30"
# Discord Rich Presence over the local IPC pipe (pure Rust, no Discord SDK).
discord-rich-presence = "0.2"

# Registry-backed scanners (GOG, EA, Ubisoft) are Windows-only.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
# Pure-Rust PE reader to extract the icon embedded in an app's .exe, so any
# installed app gets its correct icon without a curated list or native libs.
pelite = "0.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
