[package]
name = "meteor"
version = "0.0.9"
description = "Meteor - biblioteca unificada de juegos y apps"
authors = ["Alfonso"]
edition = "2021"
rust-version = "1.77"

# The library is what main.rs (and mobile entry points) call into.
[lib]
name = "meteor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Compiles the C++ ADLX shim (AMD GPU telemetry) on Windows. See build.rs.
[target.'cfg(windows)'.build-dependencies]
cc = "1"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
# Launch Meteor on Windows login so the playtime/Discord watcher runs in the
# background without the user opening the window first.
tauri-plugin-autostart = "2"
# In-app auto-update: check GitHub Releases for a newer signed build, download
# and install it, then relaunch (process plugin) — no manual reinstall.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamlocate = "2.1"
ureq = { version = "2", features = ["json", "tls"] }
urlencoding = "2"
sysinfo = "0.30"
# Discord Rich Presence over the local IPC pipe (pure Rust, no Discord SDK).
discord-rich-presence = "0.2"
# NVIDIA GPU telemetry for the in-game metrics overlay (usage, temp, VRAM,
# clocks, power). Loads nvml.dll at runtime; on non-NVIDIA systems init fails
# gracefully and the overlay just omits GPU metrics. CPU/RAM come from sysinfo.
nvml-wrapper = "0.10"

# Registry-backed scanners (GOG, EA, Ubisoft) are Windows-only.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
# Pure-Rust PE reader to extract the icon embedded in an app's .exe, so any
# installed app gets its correct icon without a curated list or native libs.
pelite = "0.10"
# Raw Win32 to force the metrics overlay back to the top of the topmost z-order
# band each tick (Tauri's set_always_on_top is a no-op once already topmost).
# Same version Tauri itself uses, so no extra build cost.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    # Detect process elevation and relaunch elevated ("Restart as admin") for the
    # admin-only metrics (CPU temp, NVIDIA FPS via PresentMon).
    "Win32_Security",
    # Resolve the user's display/full name for the Home greeting (GetUserNameExW).
    "Win32_Security_Authentication_Identity",
    "Win32_System_Threading",
    # Cheap global CPU%/RAM for the metrics sampler (GetSystemTimes /
    # GlobalMemoryStatusEx), replacing the per-tick sysinfo refresh.
    "Win32_System_SystemInformation",
    # Native layered HUD window (lightweight overlay): module handle for the window class.
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    # MPO-friendly HUD: DirectComposition + DXGI flip swapchain + Direct2D/DirectWrite,
    # so DWM can promote the overlay to a hardware plane and the game keeps independent
    # flip (no composition / input lag). Falls back to the GDI layered window.
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Foundation_Numerics",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# sysinfo 0.30 has an unguarded subtraction in its Windows process-time code
# (`compute_start`: process_times/10_000_000 - epoch). When GetProcessTimes fails for a
# protected/system process it leaves the time at 0, so the subtraction underflows. In
# release this just wraps (overflow-checks already off) and yields a bogus start_time we
# never read; but a debug build panics and kills the playtime watcher thread. Disable
# overflow checks for *just* this crate in dev so it matches release behaviour, without
# weakening overflow checks on our own code.
[profile.dev.package.sysinfo]
overflow-checks = false
